--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,4 +1,6 @@
 header.page-header {
+  background-color: #fff;
+
   .name-block {
     font-size: 20px;
     padding: 10px 20px;
